--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   logging: ^1.2.0
 
 dev_dependencies:
+  mockito: ^5.4.3
+  build_runner: ^2.4.7
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
