--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -2,10 +2,10 @@ name: Flutter Lints and Tests
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 jobs:
   lint:
     runs-on: ubuntu-latest
