--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -7,6 +7,15 @@ on:
     branches:
       - master
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter pub run build_runner build
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -23,6 +32,5 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
-      - run: flutter pub run build_runner build
       - run: flutter pub get
       - run: flutter test
