--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches:
       - master  
+env:
+  GITHUB_TOKEN: ${{ secrets.TOKEN }}
+  
 jobs:
   update_version:
     runs-on: ubuntu-latest
@@ -24,7 +27,7 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git commit -am "Update version to $new_version"
-          git push https://x-access-token:${{ secrets.TOKEN }}@github.com/MarceloEsser/flutter-core/
+          git push https://x-access-token:${{ env.GITHUB_TOKEN }}@github.com/MarceloEsser/flutter-core/
   lint:
     runs-on: ubuntu-latest
     steps:
