--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -26,7 +26,7 @@ jobs:
           # Commit and push the changes
           git config user.name "GitHub Actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git commit -am "Update version to $new_version"
+          git commit -am ":bookmark: Update version to $new_version"
           git push
   lint:
     runs-on: ubuntu-latest
