--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -5,13 +5,11 @@ on:
       - master
   pull_request:
     branches:
-      - master  
-env:
-  GITHUB_TOKEN: ${{ secrets.TOKEN }}
-  
+      - master    
 jobs:
   update_version:
     runs-on: ubuntu-latest
+    needs: [lint, tests]
     steps:
       - uses: actions/checkout@v2
       - name: Update version
