--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   logging: ^1.2.0
 
 dev_dependencies:
+  sqflite_common_ffi: ^2.3.1
   mockito: ^5.4.3
   build_runner: ^2.4.7
   flutter_test:
