--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -48,4 +48,4 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter pub run build_runner build
-      - run: flutter test
+      - run: flutter test --coverage
