--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -24,11 +24,6 @@ jobs:
           echo "Updating version to $new_version..."
           # Update the version in pubspec.yaml
           sed -i "s/$current_version/$new_version/g" pubspec.yaml
-          # Commit and push the changes
-          git config user.name "GitHub Actions"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git commit -am ":bookmark: Update version to $new_version"
-          git push
   
   lint:
     runs-on: ubuntu-latest
@@ -51,17 +46,7 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - run: flutter test --coverage --reporter=json | tee test-results.json
-
-  coverage_report:
-    runs-on: ubuntu-latest
-    needs: [tests]
-    steps:
-      - name: Find coverage file
-        run: |
-          pwd
-          ls -a
-          ls -la
-          echo ls
+      
       - name: Generate coverage report
         run: |
           echo "# Cobertura de testes" > COVERAGE.md
@@ -73,9 +58,36 @@ jobs:
   
       - name: Commit coverage report
         run: |
-          git add COVERAGE.md
-          git commit -m "Add coverage report"
+          # Commit and push the changes
+          git config user.name "GitHub Actions"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git commit -am ":bookmark: Update version to $new_version"
           git push
+
+  # coverage_report:
+  #   runs-on: ubuntu-latest
+  #   needs: [tests]
+  #   steps:
+  #     - name: Find coverage file
+  #       run: |
+  #         pwd
+  #         ls -a
+  #         ls -la
+  #         echo ls
+  #     - name: Generate coverage report
+  #       run: |
+  #         echo "# Cobertura de testes" > COVERAGE.md
+  #         echo "## Cobertura geral" >> COVERAGE.md
+  #         # Extraia a porcentagem de cobertura do arquivo lcov.info (adapte o comando se necessário)
+  #         cat coverage/lcov.info | grep -Po 'Lines executed: \d+' | cut -d ':' -f 2 | xargs echo | tr -d ' ' >> COVERAGE.md
+  #         echo "## Resultados dos testes" >> COVERAGE.md
+  #         python -c "import json; with open('test-results.json') as f: results = json.load(f); for test in results['tests']: print(f'- {test["name"]}: {test["status"]}', file=open('COVERAGE.md', 'a'))"
+  
+  #     - name: Commit coverage report
+  #       run: |
+  #         git add COVERAGE.md
+  #         git commit -m "Add coverage report"
+  #         git push
 
 
   
