--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -26,7 +26,6 @@ jobs:
           sed -i "s/$current_version/$new_version/g" pubspec.yaml
   
   lint:
-    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -38,7 +37,6 @@ jobs:
       - run: flutter analyze
   
   tests:
-    name: Tests Coverage
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -53,7 +51,7 @@ jobs:
         run: |
           echo "# Cobertura de testes" > COVERAGE.md
           echo "## Cobertura geral" >> COVERAGE.md
-          # Extraia a porcentagem de cobertura do arquivo lcov.info (adapte o comando se necessário)
+          # Extraia a porcentagem de cobertura do arquivo lcov.info (ajuste o comando se necessário)
           cat coverage/lcov.info | grep -Po 'Lines executed: \d+' | cut -d ':' -f 2 | xargs echo | tr -d ' ' >> COVERAGE.md
           echo "## Resultados dos testes" >> COVERAGE.md
           python -c "import json; with open('test-results.json') as f: results = json.load(f); [print(f'- {test["name"]}: {test["status"]}', file=open('COVERAGE.md', 'a')) for test in results['tests']]"
@@ -63,33 +61,6 @@ jobs:
           # Commit and push the changes
           git config user.name "GitHub Actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git commit -am ":bookmark: Update version to $new_version"
+          git add COVERAGE.md
+          git commit -m ":bookmark: Update version to $new_version"
           git push
-
-  # coverage_report:
-  #   runs-on: ubuntu-latest
-  #   needs: [tests]
-  #   steps:
-  #     - name: Find coverage file
-  #       run: |
-  #         pwd
-  #         ls -a
-  #         ls -la
-  #         echo ls
-  #     - name: Generate coverage report
-  #       run: |
-  #         echo "# Cobertura de testes" > COVERAGE.md
-  #         echo "## Cobertura geral" >> COVERAGE.md
-  #         # Extraia a porcentagem de cobertura do arquivo lcov.info (adapte o comando se necessário)
-  #         cat coverage/lcov.info | grep -Po 'Lines executed: \d+' | cut -d ':' -f 2 | xargs echo | tr -d ' ' >> COVERAGE.md
-  #         echo "## Resultados dos testes" >> COVERAGE.md
-  #         python -c "import json; with open('test-results.json') as f: results = json.load(f); for test in results['tests']: print(f'- {test["name"]}: {test["status"]}', file=open('COVERAGE.md', 'a'))"
-  
-  #     - name: Commit coverage report
-  #       run: |
-  #         git add COVERAGE.md
-  #         git commit -m "Add coverage report"
-  #         git push
-
-
-  
