--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -45,7 +45,9 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter pub run build_runner build
-      - run: flutter test --coverage --reporter=github | tee COVERAGE.md
+      - run: flutter test --coverage
+      - run: apt install lcov
+      - run: genhtml coverage/lcov.info --output=./coverage
 
       - name: Commit coverage report
         run: |
