--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -46,7 +46,7 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - run: flutter test --coverage
-      - run: apt install lcov
+      # - run: apt install lcov
       - run: genhtml coverage/lcov.info --output=./coverage
 
       - name: Commit coverage report
