--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -47,7 +47,7 @@ jobs:
       - run: flutter pub run build_runner build
       - run: flutter test --coverage
       - run: apt install lcov
-      - run: genhtml coverage/lcov.info --output=./coverage
+      - run: genhtml flutter-core/coverage/lcov.info --output=./coverage
 
       - name: Commit coverage report
         run: |
