--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -50,10 +50,13 @@ jobs:
       - run: genhtml flutter-core/coverage/lcov.info --output=./coverage
 
   generate_coverage:
-    - name: Report LCOV
-      uses: zgosalvez/github-actions-report-lcov@v4.1.2
-      with:
-        coverage-files: coverage/lcov.info
+    runs-on: ubuntu-latest
+    needs: [ tests ]
+    steps:
+      - name: Report LCOV
+        uses: zgosalvez/github-actions-report-lcov@v4.1.2
+        with:
+          coverage-files: coverage/lcov.info
 
   commit_changes:
     runs-on: ubuntu-latest
