--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -10,11 +10,47 @@ on:
     branches:
       - master
 jobs:
-  update_version:
+  test:
+    name: Testes com Cobertura
     runs-on: ubuntu-latest
-    needs: [ lint, tests ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Flutter configuration
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.16.9'
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Build runner
+        run: flutter pub run build_runner build
+
+      - name: Analyze project
+        run: flutter analyze
+
+      - name: Execute tests with coverage
+        run: flutter test --coverage
+
+      - name: Update COVERAGE.md
+        run: |
+          lcov --list coverage/lcov.info --no-legend | \
+          grep -v "flutter_test" | \
+          grep -v "generated_plugin_registrant" | \
+          grep -v "test/widget_test" > coverage/filtered_lcov.info
+          bash <(curl -s https://codecov.io/bash) -f coverage/filtered_lcov.info -F flutter
+
+          # Geração do arquivo COVERAGE.md
+          echo "## Cobertura de Testes" > COVERAGE.md
+          echo "" >> COVERAGE.md
+          echo "Última Atualização: $(date)" >> COVERAGE.md
+          echo "" >> COVERAGE.md
+          echo "![coverage](https://codecov.io/gh/seu-usuario/seu-projeto/branch/main/graph/badge.svg)" >> COVERAGE.md
+          echo "" >> COVERAGE.md
+          echo "Detalhes completos disponíveis em [Codecov](https://codecov.io/gh/seu-usuario/seu-projeto)" >> COVERAGE.md
+
       - name: Update version
         run: |
           # Get the current version from pubspec.yaml
@@ -24,43 +60,8 @@ jobs:
           echo "Updating version to $new_version..."
           # Update the version in pubspec.yaml
           sed -i "s/$current_version/$new_version/g" pubspec.yaml
-  
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-      - run: flutter pub get
-      - run: flutter pub run build_runner build
-      - run: flutter analyze
-  
-  tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-      - run: flutter pub get
-      - run: flutter pub run build_runner build
-      - run: flutter test --coverage
 
-  generate_coverage:
-    runs-on: ubuntu-latest
-    needs: [ tests ]
-    steps:
-      - name: Report LCOV
-        uses: zgosalvez/github-actions-report-lcov@v4.1.2
-        with:
-          coverage-files: coverage/lcov.info
-
-  commit_changes:
-    runs-on: ubuntu-latest
-    needs: [ lint, tests ]
-    steps:
-      - name: Commit coverage report
+      - name: Commit the updates
         run: |
           # Commit and push the changes
           git config user.name "GitHub Actions"
