--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: lcov configuration
+        run: sudo apt-get install -y lcov
+
       - name: Flutter configuration
         uses: subosito/flutter-action@v2
         with:
