--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -37,8 +37,10 @@ jobs:
       - name: Execute tests with coverage
         run: flutter test --coverage
 
-      - name: Update the coverage result
-        run: genhtml coverage/lcov.info --output=./coverage
+      - name: Record LCOV
+        uses: dethereum/github-actions-report-lcov@v1.0.0
+        with:
+          artifact-name: COVERAGE
 
       - name: Update version
         run: |
