--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Record LCOV
         uses: dethereum/github-actions-report-lcov@v1.0.0
         with:
+          coverage-files: coverage/lcov.info
           artifact-name: COVERAGE
 
       - name: Update version
