--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -58,6 +58,6 @@ jobs:
           # Commit and push the changes
           git config user.name "GitHub Actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add COVERAGE.md
+          git add .
           git commit -m ":bookmark: Update version to $new_version"
           git push
