--- a/.github/workflows/core_validation.yml
+++ b/.github/workflows/core_validation.yml
@@ -34,6 +34,16 @@ jobs:
       - name: Execute tests with coverage
         run: flutter test --coverage
 
+      - name: Update version
+        run: |
+          # Get the current version from pubspec.yaml
+          current_version=$(grep -E 'version: ' pubspec.yaml | cut -d' ' -f2)
+          # Increment the patch version
+          new_version="${current_version%.*}"."$(( ${current_version##*.} + 1 ))"
+          echo "Updating version to $new_version..."
+          # Update the version in pubspec.yaml
+          sed -i "s/$current_version/$new_version/g" pubspec.yaml
+
       - name: Commit the updates
         run: |
           # Commit and push the changes
